LayoutTests:

Reviewed by Hyatt.

        Test for http://bugs.webkit.org/show_bug.cgi?id=4377

        * fast/layers/layer-visibility-expected.checksum: Added.
        * fast/layers/layer-visibility-expected.png: Added.
        * fast/layers/layer-visibility-expected.txt: Added.
        * fast/layers/layer-visibility.html: Added.

WebCore:

        Reviewed by Hyatt.

        http://bugs.webkit.org/show_bug.cgi?id=4377

        Respect css visibility semantics for layers too

        * rendering/RenderContainer.cpp:
        (WebCore::RenderContainer::removeChildNode):
        (WebCore::RenderContainer::appendChildNode):
        (WebCore::RenderContainer::insertChildNode):
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::RenderLayer):
        (WebCore::RenderLayer::updateLayerPositions):
        (WebCore::RenderLayer::setHasVisibleContent):
        (WebCore::RenderLayer::dirtyVisibleContentStatus):
        (WebCore::RenderLayer::childVisibilityChanged):
        (WebCore::RenderLayer::dirtyVisibleDescendantStatus):
        (WebCore::RenderLayer::updateVisibilityStatus):
        (WebCore::RenderLayer::addChild):
        (WebCore::RenderLayer::removeChild):
        (WebCore::RenderLayer::updateZOrderLists):
        (WebCore::RenderLayer::collectLayers):
        * rendering/RenderLayer.h:
        (WebCore::RenderLayer::hasVisibleContent):
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::setStyle):



Canonical link: https://commits.webkit.org/14275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16988 268f45cc-cd09-0410-ab3c-d52691b4dbfc