WebCore/rendering/RenderLayer.h
@@ -272,6 +272,10 @@ public:
     void dirtyOverflowList();
     void updateOverflowList();
     Vector<RenderLayer*>* overflowList() const { return m_overflowList; }
+    
+    bool hasVisibleContent() const { return m_hasVisibleContent; }
+    void setHasVisibleContent(bool b);
+    void dirtyVisibleContentStatus();
 
     // Gets the nearest enclosing positioned ancestor layer (also includes
     // the <html> layer and the root layer).
@@ -339,6 +343,11 @@ private:
     virtual void valueChanged(Scrollbar*);
 
     void updateOverflowStatus(bool horizontalOverflow, bool verticalOverflow);
+    
+    void childVisibilityChanged(bool newVisibility);
+    void dirtyVisibleDescendantStatus();
+    void updateVisibilityStatus();
+        
 protected:   
     RenderObject* m_object;
     
@@ -409,6 +418,10 @@ protected:
     bool m_overflowStatusDirty : 1;
     bool m_horizontalOverflow : 1;
     bool m_verticalOverflow : 1;
+    bool m_visibleContentStatusDirty : 1;
+    bool m_hasVisibleContent : 1;
+    bool m_visibleDescendantStatusDirty : 1;
+    bool m_hasVisibleDescendant : 1;
     
     Marquee* m_marquee; // Used by layers with overflow:marquee
 };
